@@ -19,7 +19,7 @@ CPUSET_PATH="/oar"
 source "$OARCONFFILE" || exit 2
 
 # Add security option for X11 forwarding
-XAUTH_LOCATION="/usr/bin/X11/xauth"
+XAUTH_LOCATION="/usr/bin/xauth"
 if [ -x "$XAUTH_LOCATION" ]; then
     OARSH_OPENSSH_DEFAULT_OPTIONS="$OARSH_OPENSSH_DEFAULT_OPTIONS -o XAuthLocation=$XAUTH_LOCATION"
 else
